--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 live_config_reload: true
 
 window:
-  opacity: 0.92
+  opacity: 0.98
   padding:
     x: 20
     y: 18
@@ -69,33 +69,31 @@ mouse:
 colors:
   # Default colors
   primary:
-    background: '#181818'
-    foreground: '#d8d8d8'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
+    background: '#26282a'
+    foreground: '#f0f0f0'
   cursor:
-    text: '#d8d8d8'
-    cursor: '#d8d8d8'
+    background: '#f0f0f0'
+    foreground: '#26282a'
 
   # Normal colors
   normal:
-    black: '#181818'
-    red: '#ab4642'
-    green: '#a1b56c'
-    yellow: '#f7ca88'
-    blue: '#7cafc2'
-    magenta: '#ba8baf'
-    cyan: '#86c1b9'
-    white: '#d8d8d8'
+    black: '#26282a'
+    red: '#ff8878'
+    green: '#b4fb73'
+    yellow: '#fffcb7'
+    blue: '#8bbce5'
+    magenta: '#ffb2fe'
+    cyan: '#a2e1f8'
+    white: '#f1f1f1'
 
   # Bright colors
   bright:
-    black: '#585858'
-    red: '#ab4642'
-    green: '#a1b56c'
-    yellow: '#f7ca88'
-    blue: '#7cafc2'
-    magenta: '#ba8baf'
-    cyan: '#86c1b9'
-    white: '#f8f8f8'
-theme: Base16-Default-Dark
+    black: '#6f6f6f'
+    red: '#fe978b'
+    green: '#d6fcba'
+    yellow: '#fffed5'
+    blue: '#c2e3ff'
+    magenta: '#ffc6ff'
+    cyan: '#c0e9f8'
+    white: '#ffffff'
+theme: Taerminal
