--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -67,33 +67,30 @@ selection:
 mouse:
   hide_when_typing: true
 colors:
-  # Default colors
+  name: astromouse
+  author: ""
   primary:
-    background: '#26282a'
-    foreground: '#f0f0f0'
+    background: "#000000"
+    foreground: "#ffffff"
   cursor:
-    background: '#f0f0f0'
-    foreground: '#26282a'
-
-  # Normal colors
+    text: "#000000"
+    cursor: "#ffffff"
   normal:
-    black: '#26282a'
-    red: '#ff8878'
-    green: '#b4fb73'
-    yellow: '#fffcb7'
-    blue: '#8bbce5'
-    magenta: '#ffb2fe'
-    cyan: '#a2e1f8'
-    white: '#f1f1f1'
-
-  # Bright colors
+    black: "#1c1c1c"
+    red: "#d770af"
+    green: "#9acc79"
+    yellow: "#d0d26b"
+    blue: "#77b6c5"
+    magenta: "#a488d9"
+    cyan: "#7fcab3"
+    white: "#8d8d8d"
   bright:
-    black: '#6f6f6f'
-    red: '#fe978b'
-    green: '#d6fcba'
-    yellow: '#fffed5'
-    blue: '#c2e3ff'
-    magenta: '#ffc6ff'
-    cyan: '#c0e9f8'
-    white: '#ffffff'
-theme: Taerminal
+    black: "#3d3a3a"
+    red: "#d28abf"
+    green: "#8fb676"
+    yellow: "#c8bc45"
+    blue: "#8fa7b9"
+    magenta: "#bd89de"
+    cyan: "#6ec2a8"
+    white: "#dad3d3"
+theme: Astromouse
