--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,12 +1,12 @@
 live_config_reload: true
 
 window:
-  opacity: 0.98
+  opacity: 1
   padding:
-    x: 20
-    y: 18
+    x: 10
+    y: 10
   dynamic_padding: false
-  decorations: Buttonless
+  decorations: None
 
 key_bindings:
   # Rename the current tmux window
