refactor(tmux): clean up configuration and remove commented code

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,31 +2,26 @@ set-option -g detach-on-destroy off
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-# base settings
-# set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
+# Base settings
 set -g base-index 1
 setw -g pane-base-index 1
 set -g clock-mode-style 12
 set -g focus-events on
-set -g history-limit 1000000 # very large history
+set -g history-limit 1000000
 set -g renumber-windows on
 set -g set-clipboard on
 set -g status-keys vi
-set -gs escape-time 0 # TODO: investigate `-s` flag
-
-# set-option -wg allow-rename on
-# set-option -wg automatic-rename on
-# set-option -wg automatic-rename-format "#W"
+set -gs escape-time 0
 
 # Set title
 set-option -g set-titles on
 set-option -g set-titles-string "#T"
 
-# remove confirm step when killing a window or pane
+# Remove confirm step when killing a window or pane
 bind-key & kill-window
 bind-key x kill-pane
 
-# begin selection with `v` (vi-like)
+# Begin selection with `v` (vi-like)
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 # Window related bindings
@@ -79,24 +74,8 @@ set -ga status-left "#[fg=white,nobold]#(gitmux -timeout 300ms -cfg $HOME/.confi
 set -g status-right-length 50
 set -g status-right "#{now_playing}"
 
-# [0 - command]
-# set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
-# set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
-# set -ga window-status-format "#[fg=white,bg=default]#W"
-# set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
-
-# [0 * command]
-# set -g window-status-current-format "#[fg=brightblack,nobold,bg=default]["
-# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]#I "
-# set -ga window-status-current-format "#[fg=magenta,nobold,bg=default]#F "
-# set -ga window-status-current-format "#[fg=white,bold,bg=default]#W"
-# set -ga window-status-current-format "#[fg=brightblack,nobold,bg=default]]"
-
-# command
 set -g window-status-format "#[fg=brightblack,bg=default]#F"
 set -ga window-status-format "#[fg=white,bg=default]#W "
-
-# *command
 set -g window-status-current-format "#[fg=magenta,nobold,bg=default]#F"
 set -ga window-status-current-format "#[fg=white,bold,bg=default]#W "
 
@@ -108,7 +87,6 @@ set -g @now-playing-scrollable-threshold 60
 set -g @now-playing-status-format "#[fg=cyan,nobold]#[fg=blue]? #[fg=white]{artist} #[fg=cyan]? #[fg=white]{title}"
 
 # Plugins
-# set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
