chore(ghostty): update macOS titlebar style and adjust background opacity

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,11 +1,11 @@
 # Window configuration
 window-padding-x = 10
 window-padding-y = 10
-macos-titlebar-style = hidden
-background-opacity = 0.99
+macos-titlebar-style = native
+background-opacity = 1
 background-blur = 15
 
-theme = "flexoki-dark"
+theme = "Dark+"
 # theme = "hybrid" # Soft Light Dark
 # theme = "flexoki-dark" # Soft Dark
 # theme = "cga" # Dark
