--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,7 @@
 # Window configuration
 window-padding-x = 10
 window-padding-y = 10
-macos-titlebar-style = native
+macos-titlebar-style = hidden
 background-opacity = 1
 background-blur = 15
 
